--- a/config/wofi/style.css
+++ b/config/wofi/style.css
@@ -1,39 +1,45 @@
 window {
-margin: 0px;
-border: 1px solid #88c0d0;
-background-color: #2e3440;
+    margin: 0px;
+    border: 1px solid #88c0d0;
+    border-radius: 12px;
+    background-color: rgba(46, 52, 64, 0.65); /* More transparent */
 }
 
 #input {
-margin: 5px;
-border: none;
-color: #d8dee9;
-background-color: #3b4252;
+    margin: 5px;
+    border: none;
+    color: #d8dee9;
+    background-color: rgba(59, 66, 82, 0.65); /* More transparent search bar */
+    border-radius: 8px;
 }
 
 #inner-box {
-margin: 5px;
-border: none;
-background-color: #2e3440;
+    margin: 5px;
+    border: none;
+    background-color: rgba(46, 52, 64, 0.65);
+    border-radius: 8px;
 }
 
 #outer-box {
-margin: 5px;
-border: none;
-background-color: #2e3440;
+    margin: 5px;
+    border: none;
+    background-color: rgba(46, 52, 64, 0.65);
+    border-radius: 8px;
 }
 
 #scroll {
-margin: 0px;
-border: none;
+    margin: 0px;
+    border: none;
 }
 
 #text {
-margin: 5px;
-border: none;
-color: #d8dee9;
+    margin: 5px;
+    border: none;
+    color: #d8dee9;
 }
 
 #entry:selected {
-background-color: #3b4252;
+    background-color: rgba(59, 66, 82, 0.65);
+    border-radius: 6px;
 }
+
